--- a/.gitignore
+++ b/.gitignore
@@ -134,35 +134,38 @@ dmypy.json
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+Vostok/.idea/**/workspace.xml
+Vostok/.idea/**/tasks.xml
+Vostok/.idea/**/usage.statistics.xml
+Vostok/.idea/**/dictionaries
+Vostok/.idea/**/shelf
+
+.DS_Store
+Vostok/.DS_Store
 
 # Generated files
-.idea/**/contentModel.xml
+Vostok/.idea/**/contentModel.xml
 
 # Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+Vostok/.idea/**/dataSources/
+Vostok/.idea/**/dataSources.ids
+Vostok/.idea/**/dataSources.local.xml
+Vostok/.idea/**/sqlDataSources.xml
+Vostok/.idea/**/dynamic.xml
+Vostok/.idea/**/uiDesigner.xml
+Vostok/.idea/**/dbnavigator.xml
 
 # Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+Vostok/.idea/**/gradle.xml
+Vostok/.idea/**/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
+# Vostok/.idea/modules.xml
+# Vostok/.idea/*.iml
+# Vostok/.idea/modules
 # *.iml
 # *.ipr
 
@@ -170,7 +173,7 @@ dmypy.json
 cmake-build-*/
 
 # Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+Vostok/.idea/**/mongoSettings.xml
 
 # File-based project format
 *.iws
@@ -179,13 +182,13 @@ cmake-build-*/
 out/
 
 # mpeltonen/sbt-idea plugin
-.idea_modules/
+Vostok/.idea_modules/
 
 # JIRA plugin
 atlassian-ide-plugin.xml
 
 # Cursive Clojure plugin
-.idea/replstate.xml
+Vostok/.idea/replstate.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
@@ -194,28 +197,28 @@ crashlytics-build.properties
 fabric.properties
 
 # Editor-based Rest Client
-.idea/httpRequests
+Vostok/.idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+Vostok/.idea/caches/build_file_checksums.ser
 
 ### PyCharm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
 # *.iml
 # modules.xml
-# .idea/misc.xml
+# Vostok/.idea/misc.xml
 # *.ipr
 
 # Sonarlint plugin
-.idea/**/sonarlint/
+Vostok/.idea/**/sonarlint/
 
 # SonarQube Plugin
-.idea/**/sonarIssues.xml
+Vostok/.idea/**/sonarIssues.xml
 
 # Markdown Navigator plugin
-.idea/**/markdown-navigator.xml
-.idea/**/markdown-navigator/
+Vostok/.idea/**/markdown-navigator.xml
+Vostok/.idea/**/markdown-navigator/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
