agregar login movil, incompleto

--- a/Vostok/requirements.txt
+++ b/Vostok/requirements.txt
@@ -19,3 +19,18 @@ urllib3==1.25.6
 django-filter==2.1.0
 djangorestframework==3.9.3
 Markdown==3.1
+firebase-admin==3.0.0
+google-api-core==1.14.3
+google-api-python-client==1.7.11
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-cloud-core==1.0.3
+google-cloud-firestore==1.5.0
+google-cloud-storage==1.20.0
+google-resumable-media==0.4.1
+googleapis-common-protos==1.6.0
+grpcio==1.24.1
+httplib2==0.14.0
+msgpack==0.6.2
+protobuf==3.10.0
+uritemplate==3.0.0
