--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ dmypy.json
 
 # User-specific stuff
 Vostok/.idea/**/workspace.xml
+Vostok/.idea/**/workspace.xml
 Vostok/.idea/**/tasks.xml
 Vostok/.idea/**/usage.statistics.xml
 Vostok/.idea/**/dictionaries
