--- a/Vostok/requirements.txt
+++ b/Vostok/requirements.txt
@@ -14,6 +14,7 @@ requests-oauthlib==1.2.0
 six==1.12.0
 social-auth-app-django==3.1.0
 social-auth-core==3.2.0
+django-allauth
 sqlparse==0.3.0
 urllib3==1.25.6
 django-filter==2.1.0
